--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+home<!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
 
@@ -61,7 +61,7 @@
    <!-- home
    ================================================== -->
 
-   <section id="home" class="s-home page-hero target-section" data-parallax="scroll" data-image-src="images/background-purple.png" data-natural-width=3925 data-natural-height=2570 data-position-y=center>
+   <section id="home" class="s-home page-hero target-section" data-parallax="scroll" data-image-src="images/other.png" data-natural-width=3925 data-natural-height=2570 data-position-y=center>
 
         <div class="overlay"></div>
         <div class="shadow-overlay"></div>
