--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <link rel="stylesheet" href="css/ext.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/vendor.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/st.css">
 
     <!-- script
     ================================================== -->
     <script src="js/modernizr.js"></script>
     <script src="js/pace.min.js"></script>
-    
+
     <!-- favicons
     ================================================== -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -45,11 +45,11 @@
 
         <nav class="header-nav-wrap">
             <ul class="header-nav">
-                <li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
-                <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
-                <li><a class="smoothscroll"  href="#links" title="links">Links</a></li>
-                <li><a class="smoothscroll"  href="#contact" title="blog">Specs</a></li>
-                <li><a href="#blog" title="block-explorer">We're Hiring!</a></li>
+                <li class="current"><a class="smoothscroll"  href="#home" title="Home">Home</a></li>
+                <li><a class="smoothscroll"  href="#about" title="About">About</a></li>
+                <li><a class="smoothscroll"  href="#links" title="Links">Links</a></li>
+                <li><a class="smoothscroll"  href="#contact" title="Specs">Specs</a></li>
+                <li><a href="#blog" title="Block Explorer">We're Hiring!</a></li>
             </ul>
         </nav>
 
@@ -60,21 +60,18 @@
 
    <!-- home
    ================================================== -->
-
-   <section id="home" class="s-home page-hero target-section" data-parallax="scroll" data-image-src="images/other.png" data-natural-width=3925 data-natural-height=2570 data-position-y=center>
-
+  <section id="home" class="s-home page-hero target-section" data-parallax="scroll" data-image-src="images/big.png" data-natural-width=1920 data-natural-height=1080 data-position-y=center>
         <div class="overlay"></div>
         <div class="shadow-overlay"></div>
-
         <div class="home-content">
 
             <div class="row home-content__main">
-
                 <h3>The Lithe Project&trade;</h3>
 
                 <h1>
                     Lithe, money that works.
                 </h1>
+
 
                 <div class="home-content__buttons">
                     <a href="https://github.com/lithe-project" class="btn btn--stroke">
@@ -90,7 +87,6 @@
                         <span>Scroll Down</span>
                     </a>
                 </div>
-
             </div>
 
         </div> <!-- end home-content -->
@@ -437,7 +433,7 @@
 								</div>
 								<div>
 									<article class="btn--stroke">
-										<a href="https://github.com/lithe-project/lithe/releases" class="image"><img src="images/social/github.png" alt="" /></a>
+										<a href="https://github.com/lithe-project/lithe/releases" class="image"><img src="images/social/github.gif" alt="" /></a>
 										<div class="content">
 											<h3>Latest Release</h3>
 											<p>Follow the link below for our latest releases.  We currently support Linux, Windows, MacOS and x64 ARM Operating Systems.</p>
@@ -460,13 +456,13 @@
 											<div class="content">
 												<h3>Offline Wallet</h3>
 												<p>Sometimes you dont want to store your coins online.  Its just safter that way.  Here you can create a paper wallet and do just that.  Follow the link below:</p>
-												<a href="wallet.html" class="btn btn--primary full-width">Paper Wallet</a>
+												<a href="wallet.html"  class="btn btn--primary full-width">Paper Wallet</a>
 											</div>
 										</article>
 								</div>
 								<div>
 									<article class="btn--stroke">
-										<a href="https://medium.com/@lithy" class="image"><img src="images/social/monogram-mask.svg" alt="" /></a>
+										<a href="https://medium.com/@lithy" class="image"><img src="images/social/medium.gif" alt="" /></a>
 										<div class="content">
 											<h3>Medium Blog</h3>
 											<p>
@@ -478,8 +474,8 @@
 											<a href="https://medium.com/@lithy" class="btn btn--stroke full-width">Team Speach</a>
 										</div>
 									</article>
-									<article class="btn--stroke">
-										<a href="https://discord.gg/XH42C4b" class="image"><img src="images/social/discord.png" alt="" /></a>
+									<article class="btn--stroke" style="background: linear-gradient(to bottom right, #0000ff 7%, #9900ff 62%);">
+										<a href="https://discord.gg/XH42C4b" class="image"><img src="images/social/discord.gif" alt="" /></a>
 										<div class="content">
 											<h3>Discord</h3>
 											<p>Feel like having a chat? Asking a question? Do you need support to help get a rig going? 
@@ -489,11 +485,11 @@
 										</div>
 									</article>	
 									<article class="btn--stroke">
-										<a href="https://twitter.com/thelitheproject" class="image"><img src="images/social/twitter.png" alt="" /></a>
+										<a href="https://twitter.com/thelitheproject" class="image"><img src="images/social/twitter.gif" alt="" /></a>
 										<div class="content">
 											<h3>Twitter</h3>
 											<p>You can also contact us through Twitter by sending us a tweet. This is good if Discord
-												is too <i>crowded</i>, or maybe social media just isn't your thing.
+												is too <i>crowded</i>, or social media just isn't your thing.
                                             </p>
 											<a href="http://support.getamitycoin.org" class="btn btn--primary full-width">Twitter</a>
 										</div>
@@ -513,7 +509,7 @@
 
         <div class="row narrow section-intro">
             <div class="col-full">
-                <h1>Coin Specifacations</h1>
+                <h1>Coin Specifications</h1>
                 <p class="lead">Learn about the details of the Lithe currency.</p>
             </div>
 			<div>
@@ -543,12 +539,12 @@
                             <div class="mini-article-subhead">Graphic Designer</div>
                             <h2 class=""><a href="https://medium.com/@Lithy/the-lithe-project-testnet-blockchain-c4343289a6e8" class="article-card-header read-article">
                                 QML & JAVASCRIPT</a></h2>
-                            <p>Lithe currently has GUI's written in two</br>
-                                languages, QML and JavaScript. We're</br>
-                                looking to for people that may have</br>
-                                knowledge of these two langauges to</br>
-                                engage and help develop the Graphical</br>
-                                User Interfaces that allows to use </br>
+                            <p>Lithe currently has GUI's written in two
+                                languages, QML and JavaScript. We're
+                                looking to for people that may have
+                                knowledge of these two langauges to
+                                engage and help develop the Graphical
+                                User Interfaces that allows to use
                                 $LITHE wallets across multiple platforms.</br>
                             </p>
                         </div>
