--- a/wallet.html
+++ b/wallet.html
@@ -49,11 +49,12 @@
 
         <nav class="header-nav-wrap">
             <ul class="header-nav">
-                <li><a href="index.html#home" title="home">Home</a></li>
-                <li><a href="index.html#about" title="about">About</a></li>
-                <li><a href="index.html#works" title="works">Blog</a></li>
-                <li class="current"><a href="wallet.html" title="blog">Paper Wallet</a></li>
-                <li><a href="index.html#contact" title="contact">Block Explorer(soon&trade;)</a></li>	
+                <li><a href="index.html#home" title="Home">Home</a></li>
+                <li><a href="index.html#about" title="About">About</a></li>
+                <li><a href="index.html#works" title="Works">Blog</a></li>
+                <li class="current"><a href="wallet.html" title="Blog">Paper Wallet</a></li>
+                <li><a href="index.html#contact" title="Contact">We're Hiring!</a></li>
+                <li><a href="news.html" title="Lithe News">Lithe News</a></li>
             </ul>
         </nav>
 
